--- a/src/components/charts/Barchart.css
+++ b/src/components/charts/Barchart.css
@@ -2,15 +2,36 @@
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    background-color: #f4f4f4;
     padding: 20px;
     width: 100%;
-    height: 300px; 
+    height: 320px;
+    flex-wrap: wrap;
+    border-radius: 5px;
+}
+
+.bar-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+    margin-bottom: 20px;
+    justify-content: space-between;
 }
 
 .bar {
-    width: 50px; 
-    background-color: #3498db; 
-    margin-right: 10px;
+    width: 20px;
+    background-color: #3498db;
+    margin: 0 10px;
+    border-radius: 4px;
 }
 
+.label {
+    margin-top: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    .bar {
+        width: 10px;
+        margin: 0 5px;
+    }
+}
