--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,12 +13,12 @@
     top: 0;
     left: 0;
     bottom: 0;
-    width: 200px;
+    width: 180px;
     height: 100vh;
     padding: 0 1.7rem;
     color: white;
     overflow: hidden;
-    transition: a11 0.5s linear;
+    transition: all 0.5s linear;
     background: #0B0C40;
 }
 
@@ -221,7 +221,7 @@ tr:nth-child(even){
     border-radius: 20px;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
     .Sidebar {
         width: 100%;
         padding: 0 0.5rem;
@@ -263,8 +263,11 @@ tr:nth-child(even){
         grid-template-columns: 1fr;
     }
 
-    .graphs .box, .graphs .box1 {
+    .graphs .box{
         width: 100%;
+    }
+    .graphs .box1{
+        width: 50%;
     }
 }
 
