--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -111,6 +111,21 @@
     border-radius: 4px;
 }
 
+.search-box {
+    position: relative;
+  }
+  
+  .search {
+    padding-left: 30px; 
+  }
+.fa-search {
+    position: absolute;
+    top: 50%;
+    left: 10px; 
+    transform: translateY(-50%);
+    color: #aaa;
+  }
+
 .card-container{
     background-color: #ebe9e9;
     padding: 2rem;
