--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -288,7 +288,8 @@ tr:nth-child(even){
     background: #fff;
     align-items: center;
     padding: 20px;
-    width: 100%;
+    width: 80%;
+    height: 100%;
     box-shadow: 0 7px 25px rgba(0,0,0,0.08);
     border-radius: 20px;
     margin: auto;
